--- a/slides.html
+++ b/slides.html
@@ -344,7 +344,7 @@
 <h2></h2>
 
 <img data-src="img/jno.png" class="r-stretch"><p>&nbsp;</p>
-<p>Exposure to gun violence, pervasive but varies widely by…</p>
+<p>Exposure to gun violence is pervasive but varies by…</p>
 <ul>
 <li>Birth cohort</li>
 <li>Race</li>
@@ -376,7 +376,7 @@
 <li>Young carriers likely in uniquely dangerous contexts</li>
 </ul>
 </section>
-<section id="the-present-study" class="slide level2">
+<section id="the-present-study" class="slide level2" data-background-image="img/clay-banks-nsAn3nSW5T0-unsplash.jpg" data-background-opacity="0.3">
 <h2>The present study</h2>
 <p>&nbsp;</p>
 <p>Race, sex, and cohort differentiated exposure to gun violence may produce lasting <strong>harm to physical and mental heath</strong></p>
@@ -389,7 +389,7 @@
 <p>… or even <strong>die</strong> as a result of that danger</p>
 </div>
 </section>
-<section id="section-4" class="slide level2" data-background-image="img/stephan-cassara-KnAIsBuitGg-unsplash.jpg" data-background-opacity="0.15">
+<section id="section-4" class="slide level2" data-background-image="img/clay-banks-nsAn3nSW5T0-unsplash.jpg" data-background-opacity="0.15">
 <h2></h2>
 <div class="cell" data-fig-width="12">
 <div class="cell-output-display">
@@ -539,7 +539,7 @@ midlife
 <section id="analysis" class="slide level2" data-background-image="img/clay-banks-nsAn3nSW5T0-unsplash.jpg" data-background-opacity="0.3">
 <h2>Analysis</h2>
 <ul>
-<li>Today: Exploratory analysis
+<li>Today’s exploratory analysis:
 <ul>
 <li>Linear and ordinal models</li>
 <li>Covariate control
@@ -557,7 +557,7 @@ midlife
 <li>More complete model</li>
 <li>Plausibly identified effects
 <ul>
-<li>e.g., Structural nested models</li>
+<li>e.g., structural nested models</li>
 </ul></li>
 </ul></li>
 </ul>
@@ -584,11 +584,12 @@ midlife
 <section id="physical-health-in-adolescence" class="slide level2" data-background-image="img/benjamin-suter-mpLex62zVKQ-unsplash.jpg" data-background-opacity="0.15">
 <h2>Physical health in adolescence</h2>
 
-<img data-src="slides_files/figure-revealjs/unnamed-chunk-5-1.png" width="960" class="r-stretch quarto-figure-center"><p>Note: 1996 cohort only</p>
+<img data-src="slides_files/figure-revealjs/unnamed-chunk-6-1.png" width="960" class="r-stretch quarto-figure-center"><p>Note: 1996 cohort only</p>
 </section>
 <section id="mortality-sneak-peek" class="slide level2" data-background-image="img/pedro-lastra-5Bv3EcijAl4-unsplash.jpg" data-background-opacity="0.15">
 <h2>Mortality sneak-peek</h2>
-</section></section>
+
+<img data-src="img/hazard_mortality.png" class="r-stretch"></section></section>
 <section>
 <section id="takeaways" class="title-slide slide level1 center" data-background-image="img/joel-mott-s-rsM-AktbA-unsplash.jpg" data-background-opacity="0.3">
 <h1>Takeaways</h1>
@@ -598,6 +599,7 @@ midlife
 <h2>Key results</h2>
 <ul>
 <li>Modest but significant associations over time</li>
+<li>Strong contemporaneous associations</li>
 <li>Not accounting for mortality censoring or mobility
 <ul>
 <li>These may suppress (or amplify) associations</li>
@@ -632,14 +634,11 @@ University of Cambridge<br>
 <p>PHDCN@fas.harvard.edu<br>
 <a href="https://sites.harvard.edu/phdcn/" class="uri">https://sites.harvard.edu/phdcn/</a><br>
 <a href="https://sites.harvard.edu/phdcn/">https://doi.org/10.1007/s40865-022-00203-0</a></p>
-</section></section>
-<section id="appendix" class="title-slide slide level1 center" data-background-image="img/max-bender-yb7Yg3Rv7WA-unsplash.jpg" data-background-opacity="0.3">
-<h1>Appendix</h1>
 
 <img src="img/phdcn_logo_white.svg" class="slide-logo r-stretch"><div class="footer footer-default">
 
 </div>
-</section>
+</section></section>
     </div>
   </div>
 
