Yet more refinement!

--- a/slides.html
+++ b/slides.html
@@ -503,7 +503,7 @@ midlife
 </ul>
 </div>
 </section>
-<section id="section-5" class="slide level2 nostretch" data-background-image="img/clay-banks-nsAn3nSW5T0-unsplash.jpg" data-background-opacity="0.3">
+<section id="section-5" class="slide level2 nostretch" data-background-image="img/pedro-lastra-5Bv3EcijAl4-unsplash.jpg" data-background-opacity="0.2">
 <h2></h2>
 <p><img data-src="img/phdcn_logo_white.svg" data-align="center" width="700"></p>
 <div class="columns">
@@ -521,6 +521,7 @@ midlife
 <li><strong>5 category self-reported physical health</strong></li>
 <li>Diagnosed serious health conditions</li>
 </ul></li>
+<li>Substance use</li>
 </ul></li>
 </ul>
 </div><div class="column">
@@ -536,7 +537,7 @@ midlife
 </div>
 </div>
 </section>
-<section id="analysis" class="slide level2" data-background-image="img/clay-banks-nsAn3nSW5T0-unsplash.jpg" data-background-opacity="0.3">
+<section id="analysis" class="slide level2" data-background-image="img/pedro-lastra-5Bv3EcijAl4-unsplash.jpg" data-background-opacity="0.2">
 <h2>Analysis</h2>
 <ul>
 <li>Today’s exploratory analysis:
@@ -551,7 +552,7 @@ midlife
 </ul>
 <div class="fragment">
 <ul>
-<li>Later:
+<li>Future plans:
 <ul>
 <li>Improved measurement</li>
 <li>More complete model</li>
@@ -586,7 +587,7 @@ midlife
 
 <img data-src="slides_files/figure-revealjs/unnamed-chunk-6-1.png" width="960" class="r-stretch quarto-figure-center"><p>Note: 1996 cohort only</p>
 </section>
-<section id="mortality-sneak-peek" class="slide level2" data-background-image="img/pedro-lastra-5Bv3EcijAl4-unsplash.jpg" data-background-opacity="0.15">
+<section id="mortality-sneak-peek" class="slide level2" data-background-image="img/benjamin-suter-mpLex62zVKQ-unsplash.jpg" data-background-opacity="0.15">
 <h2>Mortality sneak-peek</h2>
 
 <img data-src="img/hazard_mortality.png" class="r-stretch"></section></section>
@@ -600,7 +601,7 @@ midlife
 <ul>
 <li>Modest but significant associations over time</li>
 <li>Strong contemporaneous associations</li>
-<li>Not accounting for mortality censoring or mobility
+<li>Not accounting for mortality or mobility
 <ul>
 <li>These may suppress (or amplify) associations</li>
 </ul></li>
@@ -609,16 +610,19 @@ midlife
 <section id="next-steps" class="slide level2" data-background-image="img/joel-mott-s-rsM-AktbA-unsplash.jpg" data-background-opacity="0.3">
 <h2>Next steps</h2>
 <ul>
-<li>Can we get leverage on a causal identification?
-<ul>
-<li>Power / variation</li>
-<li>Sequential ignorability</li>
-</ul></li>
 <li>Expanding the model
 <ul>
 <li>Mortality</li>
 <li>Mobility</li>
 <li>Serious physical health conditions</li>
+</ul></li>
+</ul>
+<p>&nbsp;</p>
+<ul>
+<li>Can we get leverage on causal identification?
+<ul>
+<li>Power / variation</li>
+<li>Sequential ignorability</li>
 </ul></li>
 </ul>
 </section>
