--- a/slides.html
+++ b/slides.html
@@ -395,8 +395,8 @@
 <div class="cell-output-display">
 <div>
 <div>
-<svg width="1152" height="480" viewbox="0.00 0.00 520.45 301.60" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" style="; max-width: none; max-height: none; display: block; margin: auto auto auto auto">
-<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 297.6)">
+<svg width="1152" height="480" viewbox="0.00 0.00 520.45 308.52" xmlns="http://www.w3.org/2000/svg" xlink="http://www.w3.org/1999/xlink" style="; max-width: none; max-height: none; display: block; margin: auto auto auto auto">
+<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 304.52)">
 <title>
 G
 </title>
@@ -405,75 +405,83 @@ G
 <title>
 dc1
 </title>
-<text text-anchor="middle" x="50.93" y="-205" font-family="Open Sans" font-size="14.00" fill="white">Exposure to</text> <text text-anchor="middle" x="50.93" y="-188.2" font-family="Open Sans" font-size="14.00" fill="white">Gun Violence</text> </g> <!-- out1 --> <g id="node2" class="node">
+<text text-anchor="middle" x="50.93" y="-211.92" font-family="Open Sans" font-size="14.00" fill="white">Exposure to</text> <text text-anchor="middle" x="50.93" y="-195.12" font-family="Open Sans" font-size="14.00" fill="white">Gun Violence</text> </g> <!-- out1 --> <g id="node2" class="node">
 <title>
 out1
 </title>
-<text text-anchor="middle" x="122.93" y="-16.6" font-family="Open Sans" font-size="14.00" fill="white">Health</text> </g> <!-- dc1&#45;&gt;out1 --> <g id="edge2" class="edge">
+<text text-anchor="middle" x="122.93" y="-23.52" font-family="Open Sans" font-size="14.00" fill="white">Health</text> </g> <!-- dc1&#45;&gt;out1 --> <g id="edge3" class="edge">
 <title>
 dc1-&gt;out1
 </title>
-<path fill="none" stroke="white" d="M59.19,-180.15C72.15,-147.74 97.3,-84.88 111.83,-48.55"></path> <polygon fill="white" stroke="white" points="115.16,-49.63 115.63,-39.05 108.66,-47.03 115.16,-49.63"></polygon> </g> <!-- mob --> <g id="node3" class="node">
+<path fill="none" stroke="white" d="M59.19,-187.07C72.15,-154.66 97.3,-91.8 111.83,-55.47"></path> <polygon fill="white" stroke="white" points="115.16,-56.56 115.63,-45.97 108.66,-53.96 115.16,-56.56"></polygon> </g> <!-- mob --> <g id="node3" class="node">
 <title>
 mob
 </title>
-<text text-anchor="middle" x="302.93" y="-25" font-family="Open Sans" font-size="14.00" fill="white">Residential</text> <text text-anchor="middle" x="302.93" y="-8.2" font-family="Open Sans" font-size="14.00" fill="white">Mobility</text> </g> <!-- dc1&#45;&gt;mob --> <g id="edge7" class="edge">
+<text text-anchor="middle" x="302.93" y="-31.92" font-family="Open Sans" font-size="14.00" fill="white">Residential</text> <text text-anchor="middle" x="302.93" y="-15.12" font-family="Open Sans" font-size="14.00" fill="white">Mobility</text> </g> <!-- dc1&#45;&gt;mob --> <g id="edge8" class="edge">
 <title>
 dc1-&gt;mob
 </title>
-<path fill="none" stroke="white" d="M79.83,-180.15C125.66,-147.42 214.98,-83.62 265.59,-47.47"></path> <polygon fill="white" stroke="white" points="267.87,-50.14 273.97,-41.48 263.8,-44.45 267.87,-50.14"></polygon> </g> <!-- dc2 --> <g id="node4" class="node">
+<path fill="none" stroke="white" d="M79.83,-187.07C125.66,-154.34 214.98,-90.54 265.59,-54.39"></path> <polygon fill="white" stroke="white" points="267.87,-57.07 273.97,-48.41 263.8,-51.37 267.87,-57.07"></polygon> </g> <!-- dc2 --> <g id="node4" class="node">
 <title>
 dc2
 </title>
-<text text-anchor="middle" x="410.93" y="-205" font-family="Open Sans" font-size="14.00" fill="white">Exposure to</text> <text text-anchor="middle" x="410.93" y="-188.2" font-family="Open Sans" font-size="14.00" fill="white">Gun Violence</text> </g> <!-- dc1&#45;&gt;dc2 --> <g id="edge1" class="edge">
+<text text-anchor="middle" x="410.93" y="-211.92" font-family="Open Sans" font-size="14.00" fill="white">Exposure to</text> <text text-anchor="middle" x="410.93" y="-195.12" font-family="Open Sans" font-size="14.00" fill="white">Gun Violence</text> </g> <!-- dc1&#45;&gt;dc2 --> <g id="edge1" class="edge">
 <title>
 dc1-&gt;dc2
 </title>
-<path fill="none" stroke="white" d="M102.12,-200.8C167.3,-200.8 279.8,-200.8 349.52,-200.8"></path> <polygon fill="white" stroke="white" points="349.91,-204.3 359.91,-200.8 349.91,-197.3 349.91,-204.3"></polygon> </g> <!-- mort --> <g id="node5" class="node">
+<path fill="none" stroke="white" d="M102.12,-207.72C167.3,-207.72 279.8,-207.72 349.52,-207.72"></path> <polygon fill="white" stroke="white" points="349.91,-211.22 359.91,-207.72 349.91,-204.22 349.91,-211.22"></polygon> </g> <!-- mort --> <g id="node5" class="node">
 <title>
 mort
 </title>
-<text text-anchor="middle" x="302.93" y="-142.6" font-family="Open Sans" font-size="14.00" fill="white">Mortality</text> </g> <!-- dc1&#45;&gt;mort --> <g id="edge3" class="edge">
+<text text-anchor="middle" x="302.93" y="-149.52" font-family="Open Sans" font-size="14.00" fill="white">Mortality</text> </g> <!-- dc1&#45;&gt;mort --> <g id="edge4" class="edge">
 <title>
 dc1-&gt;mort
 </title>
-<path fill="none" stroke="white" d="M101.92,-189.87C146.89,-180.24 211.89,-166.31 255.69,-156.92"></path> <polygon fill="white" stroke="white" points="256.47,-160.33 265.52,-154.82 255.01,-153.49 256.47,-160.33"></polygon> </g> <!-- out1&#45;&gt;mob --> <g id="edge6" class="edge">
-<title>
-out1-&gt;mob
-</title>
-<path fill="none" stroke="white" d="M152.65,-20.8C178.76,-20.8 217.38,-20.8 248.94,-20.8"></path> <polygon fill="white" stroke="white" points="249.34,-24.3 259.34,-20.8 249.34,-17.3 249.34,-24.3"></polygon> </g> <!-- out1&#45;&gt;mort --> <g id="edge4" class="edge">
-<title>
-out1-&gt;mort
-</title>
-<path fill="none" stroke="white" d="M148.72,-38.85C180.26,-60.93 233.76,-98.39 268.72,-122.86"></path> <polygon fill="white" stroke="white" points="266.99,-125.91 277.18,-128.78 271,-120.18 266.99,-125.91"></polygon> </g> <!-- mob&#45;&gt;dc2 --> <g id="edge8" class="edge">
-<title>
-mob-&gt;dc2
-</title>
-<path fill="none" stroke="white" d="M315.32,-41.45C334.47,-73.37 371.35,-134.83 393.28,-171.39"></path> <polygon fill="white" stroke="white" points="390.37,-173.34 398.52,-180.12 396.37,-169.74 390.37,-173.34"></polygon> </g> <!-- mob&#45;&gt;mort --> <g id="edge5" class="edge">
-<title>
-mob-&gt;mort
-</title>
-<path fill="none" stroke="white" d="M302.93,-41.61C302.93,-62.48 302.93,-94.8 302.93,-118.11"></path> <polygon fill="white" stroke="white" points="299.43,-118.42 302.93,-128.42 306.43,-118.42 299.43,-118.42"></polygon> </g> <!-- health2 --> <g id="node6" class="node">
+<path fill="none" stroke="white" d="M101.92,-196.79C146.89,-187.16 211.89,-173.23 255.69,-163.84"></path> <polygon fill="white" stroke="white" points="256.47,-167.26 265.52,-161.74 255.01,-160.41 256.47,-167.26"></polygon> </g> <!-- health2 --> <g id="node6" class="node">
 <title>
 health2
 </title>
-<text text-anchor="middle" x="482.93" y="-16.6" font-family="Open Sans" font-size="14.00" fill="white">Health</text> </g> <!-- mob&#45;&gt;health2 --> <g id="edge10" class="edge">
+<text text-anchor="middle" x="482.93" y="-23.52" font-family="Open Sans" font-size="14.00" fill="white">Health</text> </g> <!-- dc1&#45;&gt;health2 --> <g id="edge2" class="edge">
+<title>
+dc1-&gt;health2
+</title>
+<path fill="none" stroke="white" d="M100.48,-187.07C187.2,-150.94 364.72,-76.97 443.62,-44.1"></path> <polygon fill="white" stroke="white" points="445.31,-47.19 453.19,-40.11 442.61,-40.73 445.31,-47.19"></polygon> </g> <!-- out1&#45;&gt;mob --> <g id="edge7" class="edge">
+<title>
+out1-&gt;mob
+</title>
+<path fill="none" stroke="white" d="M152.65,-27.72C178.76,-27.72 217.38,-27.72 248.94,-27.72"></path> <polygon fill="white" stroke="white" points="249.34,-31.22 259.34,-27.72 249.34,-24.22 249.34,-31.22"></polygon> </g> <!-- out1&#45;&gt;mort --> <g id="edge5" class="edge">
+<title>
+out1-&gt;mort
+</title>
+<path fill="none" stroke="white" d="M148.72,-45.78C180.26,-67.86 233.76,-105.31 268.72,-129.78"></path> <polygon fill="white" stroke="white" points="266.99,-132.84 277.18,-135.7 271,-127.1 266.99,-132.84"></polygon> </g> <!-- out1&#45;&gt;health2 --> <g id="edge12" class="edge">
+<title>
+out1-&gt;health2
+</title>
+<path fill="none" stroke="white" d="M152.57,-20.81C179.39,-14.92 220.07,-6.93 255.94,-3.72 297.54,0 308.31,0 349.91,-3.72 381.58,-6.56 417,-13.12 443.31,-18.66"></path> <polygon fill="white" stroke="white" points="442.77,-22.12 453.28,-20.81 444.24,-15.28 442.77,-22.12"></polygon> </g> <!-- mob&#45;&gt;dc2 --> <g id="edge9" class="edge">
+<title>
+mob-&gt;dc2
+</title>
+<path fill="none" stroke="white" d="M315.32,-48.37C334.47,-80.29 371.35,-141.76 393.28,-178.31"></path> <polygon fill="white" stroke="white" points="390.37,-180.26 398.52,-187.04 396.37,-176.66 390.37,-180.26"></polygon> </g> <!-- mob&#45;&gt;mort --> <g id="edge6" class="edge">
+<title>
+mob-&gt;mort
+</title>
+<path fill="none" stroke="white" d="M302.93,-48.53C302.93,-69.41 302.93,-101.73 302.93,-125.03"></path> <polygon fill="white" stroke="white" points="299.43,-125.35 302.93,-135.35 306.43,-125.35 299.43,-125.35"></polygon> </g> <!-- mob&#45;&gt;health2 --> <g id="edge11" class="edge">
 <title>
 mob-&gt;health2
 </title>
-<path fill="none" stroke="white" d="M346.5,-20.8C375.97,-20.8 414.58,-20.8 443.2,-20.8"></path> <polygon fill="white" stroke="white" points="443.26,-24.3 453.26,-20.8 443.26,-17.3 443.26,-24.3"></polygon> </g> <!-- dc2&#45;&gt;health2 --> <g id="edge9" class="edge">
+<path fill="none" stroke="white" d="M346.5,-27.72C375.97,-27.72 414.58,-27.72 443.2,-27.72"></path> <polygon fill="white" stroke="white" points="443.26,-31.22 453.26,-27.72 443.26,-24.22 443.26,-31.22"></polygon> </g> <!-- dc2&#45;&gt;health2 --> <g id="edge10" class="edge">
 <title>
 dc2-&gt;health2
 </title>
-<path fill="none" stroke="white" d="M419.19,-180.15C432.15,-147.74 457.3,-84.88 471.83,-48.55"></path> <polygon fill="white" stroke="white" points="475.16,-49.63 475.63,-39.05 468.66,-47.03 475.16,-49.63"></polygon> </g> <!-- earlylife --> <g id="node7" class="node">
+<path fill="none" stroke="white" d="M419.19,-187.07C432.15,-154.66 457.3,-91.8 471.83,-55.47"></path> <polygon fill="white" stroke="white" points="475.16,-56.56 475.63,-45.97 468.66,-53.96 475.16,-56.56"></polygon> </g> <!-- earlylife --> <g id="node7" class="node">
 <title>
 earlylife
 </title>
-<text text-anchor="middle" x="86.93" y="-277" font-family="Open Sans" font-size="14.00" fill="yellow">Childhood and</text> <text text-anchor="middle" x="86.93" y="-260.2" font-family="Open Sans" font-size="14.00" fill="yellow">Adolescence</text> </g> <!-- midlife --> <g id="node8" class="node">
+<text text-anchor="middle" x="86.93" y="-283.92" font-family="Open Sans" font-size="14.00" fill="yellow">Childhood and</text> <text text-anchor="middle" x="86.93" y="-267.12" font-family="Open Sans" font-size="14.00" fill="yellow">Adolescence</text> </g> <!-- midlife --> <g id="node8" class="node">
 <title>
 midlife
 </title>
-<text text-anchor="middle" x="374.93" y="-277" font-family="Open Sans" font-size="14.00" fill="yellow">Early and Mid</text> <text text-anchor="middle" x="374.93" y="-260.2" font-family="Open Sans" font-size="14.00" fill="yellow">Adulthood</text> </g> </g>
+<text text-anchor="middle" x="374.93" y="-283.92" font-family="Open Sans" font-size="14.00" fill="yellow">Early and Mid</text> <text text-anchor="middle" x="374.93" y="-267.12" font-family="Open Sans" font-size="14.00" fill="yellow">Adulthood</text> </g> </g>
 </svg>
 </div>
 </div>
