--- a/slides.html
+++ b/slides.html
@@ -521,12 +521,15 @@ midlife
 <ul>
 <li>Mental:
 <ul>
-<li><strong>Kessler K6 distress scale</strong></li>
+<li><strong>Kessler K6 distress scale (0-24)</strong>
+<ul>
+<li>13+ indicative of serious mental illness</li>
+</ul></li>
 <li>Anxiety, depression, PTSD</li>
 </ul></li>
 <li>Physical:
 <ul>
-<li><strong>5 category self-reported physical health</strong></li>
+<li><strong>Self-reported physical health (1-5)</strong></li>
 <li>Diagnosed serious health conditions</li>
 </ul></li>
 <li>Substance use</li>
@@ -538,7 +541,7 @@ midlife
 <ul>
 <li>Age first <strong>saw someone shot</strong></li>
 <li><strong>Adolescent gun carrying</strong></li>
-<li><strong>Recent nearby shootings</strong></li>
+<li><strong>Past-year shootings within 250m</strong></li>
 <li>Tract homicide rate</li>
 </ul></li>
 </ul>
@@ -563,7 +566,11 @@ midlife
 <li>Future plans:
 <ul>
 <li>Improved measurement</li>
-<li>More complete model</li>
+<li>More complete model
+<ul>
+<li>Mortality</li>
+<li>Mobility</li>
+</ul></li>
 <li>Plausibly identified effects
 <ul>
 <li>e.g., structural nested models</li>
@@ -607,8 +614,14 @@ midlife
 <section id="key-results" class="slide level2" data-background-image="img/joel-mott-s-rsM-AktbA-unsplash.jpg" data-background-opacity="0.3">
 <h2>Key results</h2>
 <ul>
-<li>Modest but significant associations over time</li>
-<li>Strong contemporaneous associations</li>
+<li>Modest but significant associations over time
+<ul>
+<li>Primarily mental health</li>
+</ul></li>
+<li>Strong contemporaneous associations
+<ul>
+<li>Young gun carriers reported poor mental, excellent physical health</li>
+</ul></li>
 <li>Not accounting for mortality or mobility
 <ul>
 <li>These may suppress (or amplify) associations</li>
@@ -646,6 +659,46 @@ University of Cambridge<br>
 <p>PHDCN@fas.harvard.edu<br>
 <a href="https://sites.harvard.edu/phdcn/" class="uri">https://sites.harvard.edu/phdcn/</a><br>
 <a href="https://sites.harvard.edu/phdcn/">https://doi.org/10.1007/s40865-022-00203-0</a></p>
+</section></section>
+<section>
+<section id="appendix" class="title-slide slide level1 smaller center" data-background-image="img/joel-mott-s-rsM-AktbA-unsplash.jpg" data-background-opacity="0.3">
+<h1>Appendix</h1>
+
+</section>
+<section id="kessler-k6" class="slide level2 smaller" data-background-image="img/joel-mott-s-rsM-AktbA-unsplash.jpg" data-background-opacity="0.15">
+<h2>Kessler K6</h2>
+<p>“During the past 30 days, about how often did you feel…”</p>
+<div class="columns">
+<div class="column">
+<ul>
+<li>… nervous?</li>
+<li>… hopeless?</li>
+<li>… restless or fidgety?</li>
+<li>… so depressed that nothing could cheer you up?</li>
+<li>… that everything was an effort?</li>
+<li>… worthless?</li>
+</ul>
+</div><div class="column">
+<p>Levels:</p>
+<ul>
+<li><ol start="4" type="1">
+<li>All of the time</li>
+</ol></li>
+<li><ol start="3" type="1">
+<li>Most of the time</li>
+</ol></li>
+<li><ol start="2" type="1">
+<li>Some of the time</li>
+</ol></li>
+<li><ol type="1">
+<li>A little of the time</li>
+</ol></li>
+<li><ol start="0" type="1">
+<li>None of the time</li>
+</ol></li>
+</ul>
+</div>
+</div>
 
 <img src="img/phdcn_logo_white.svg" class="slide-logo r-stretch"><div class="footer footer-default">
 
